--- a/service/service_acl/src/main/resources/application.properties
+++ b/service/service_acl/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.redis.lettuce.pool.min-idle=0
 
 #配置mapper xml文件的路径
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.type-aliases-package=com.hsx.aclservice.entity
 #mybatis日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # 打印sql
